--- a/Instructions/20778C_LAB_01_LAK.md
+++ b/Instructions/20778C_LAB_01_LAK.md
@@ -2,7 +2,7 @@
 
 - [Module 1: Introduction to Self-Service BI Solutions](#module-1-introduction-to-self-service-bi-solutions)
   - [Lab: Exploring an Enterprise BI Solution](#lab-exploring-an-enterprise-bi-solution)
-    - [Exercise 1: Viewing Reports](#exercise-1-viewing-reports)
+    - [Exercise 1: Lab Environment Setup](#exercise-1-viewing-reports)
       - [Task 1: Prepare the Lab Environment](#task-1-prepare-the-lab-environment)
       - [Task 2: View Reports in SharePoint Server](#task-2-view-reports-in-sharepoint-server)
     - [Exercise 2: Creating a Power BI Report](#exercise-2-creating-a-power-bi-report)
@@ -15,11 +15,11 @@
 
 ## Lab: Exploring an Enterprise BI Solution
 
-### Exercise 1: Viewing Reports
+### Exercise 1: Lab Environment Setup
 
 #### Task 1: Prepare the Lab Environment
 
-1. Ensure that the **MT17B-WS2016-NAT**, **20778C-MIA-DC**, **20778C-MIA-SQL**, and **20778C-MIA-CLI** virtual machines are running, and then log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student** with the password **Pa55w.rd**.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 2. In File Explorer, in the **D:\\Labfiles\\Lab01\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -29,61 +29,7 @@
 
 5. When the script is complete, press any key to close the window.
 
-6. If you do not have a Power BI login, open Internet Explorer, browse to **https://powerbi.microsoft.com/en-us/documentation/powerbi-admin-signing-up-for-power-bi-with-a-new-office-365-trial**, and then follow the steps to create an account.
 
-7. In Internet Explorer, type **http://mia-sql/sites/adventureworks**, and then press Enter, wait for the site to appear.
-
-8. Close Internet Explorer.
-
-#### Task 2: View Reports in SharePoint Server
-
-1. Log on to **20778C-MIA-CLI** as **Student** with the password **Pa55w.rd**.
-
-2. In File Explorer, navigate to the folder **D:\\Labfiles\\Lab01\\Starter\\Project**, and double-click the **Adventure Works Sales.xlsx** file.
-
-3. If the **External Data Connections have been disabled** security warning appears, click **Enable Content**.
-
-4. On the **SalesPerson** tab, click any cell in the table and select it so the **Design** tab appears.
-
-5. On the **Design** tab, click **Summarize with PivotTable**.
-
-6. In the **Create PivotTable** dialog box, click **OK**.
-
-7. In the new worksheet, in **PivotTable Fields**, select the **FirstName** check box to add this to the Axis, and then select the **SalesYTD** check box, to add this to Values.
-
-8. In the **Tools** group, click **PivotChart**.
-
-9. In the **Insert Chart** dialog box, leave **Clustered Column** selected, and click **OK**.
-
-10. On the **Design** tab, in the **Location** group, click **Move Chart**.
-
-11. In the **Move Chart** dialog box, click **New sheet**, type **Sales Person Chart**, and then click **OK**.
-
-12. On the **File** menu, click **Save As**, and then click **Browse**.
-
-13. In the **Save As** dialog box, in the file location bar, type **http://mia-sql/sites/adventureworks**, and then press Enter.
-
-14. In the **Windows Security** dialog box, in the **User name** box, type **ADVENTUREWORKS\\Student**, in the **Password** box, type **Pa55w.rd**, and then click **OK**.
-
-15. Click **Documents**, click **Open**, and then click **Save**.
-
-16. Close Excel 2016.
-
-17. Open **Internet Explorer**, and navigate to **[http://mia-sql/sites/adventureworks/Shared Documents](http://mia-sql/sites/adventureworks/Shared%20Documents)**.
-
-18. In the **Windows Security** dialog box, in the **User name** box, type **ADVENTUREWORKS\\Student**, in the **Password** box, type **Pa55w.rd**, and then click **OK**.
-
-19. Click **Adventure Works Sales** to open the workbook in Excel.
-
-20. In the **Microsoft Office** dialog box, click **Yes**.
-
-21. In the **Windows Security** dialog boxes, in the **User name** box, type **ADVENTUREWORKS\\Student**, in the **Password** box, type **Pa55w.rd**, and then click **OK**.
-
-22. View the **Sales Person Chart** clustered column chart.
-
-23. Close Excel 2016, and then close Internet Explorer.
-
----
 
 ### Exercise 2: Creating a Power BI Report
 
