--- a/Instructions/20778C_LAB_01_LAK.md
+++ b/Instructions/20778C_LAB_01_LAK.md
@@ -8,10 +8,6 @@
     - [Exercise 2: Creating a Power BI Report](#exercise-2-creating-a-power-bi-report)
       - [Task 1: Import Data into Power BI Desktop](#task-1-import-data-into-power-bi-desktop)
       - [Task 2: Add Visualizations to the Report](#task-2-add-visualizations-to-the-report)
-    - [Exercise 3: Creating a Power BI Dashboard](#exercise-3-creating-a-power-bi-dashboard)
-      - [Task 1: Create a Power BI Dashboard](#task-1-create-a-power-bi-dashboard)
-      - [Task 2: Ask Questions of Your Data](#task-2-ask-questions-of-your-data)
-
 
 ## Lab: Exploring an Enterprise BI Solution
 
@@ -35,21 +31,17 @@
 
 #### Task 1: Import Data into Power BI Desktop
 
-1. Log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student**, with a password of **Pa55w.rd**.
+1. Make sure previous task was completed.
 
 2. On the Taskbar, click **Power BI Desktop**.
 
-3. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
-
-4. In the **Sign in** dialog box, enter your credentials, and then click **Sign in**.
-
-5. In the **Sign in to your account** dialog box, enter your credentials, and then click **Sign in**.
+3. To close the getting started window, at the top-right of the window, click **X**.
 
 6. On the **Power BI Desktop** screen appears, click **Get data**.
 
 7. In the **Get Data** dialog box, click **SQL Server database**, and then click **Connect**.
 
-8. In the **SQL Server database** dialog box, in the **Server** box, type **MIA-SQL**.
+8. In the **SQL Server database** dialog box, in the **Server** box, type **localhost**.
 
 9. In the **Database (optional)** box, type **AdventureWorksDW**, and then click **OK**.
 
@@ -60,6 +52,8 @@
 12. In the **Navigator** dialog box, select the **FactInternetSales** check box.
 
 13. Click **Select Related Tables**, and then click **Load**.
+
+**Note:** Wait for some time while tables are loaded.
 
 14. On the **File** menu, click **Save**.
 
@@ -76,6 +70,8 @@
 4. In the **VISUALIZATIONS** pane, click **Format**, and expand **Title**.
 
 5. In the **Title text** box, type **Sales by Day of Week**.
+
+![](./images/1.png)
 
 6. Next to **Alignment**, click the **Center** icon.
 
@@ -97,9 +93,13 @@
 
 15. In the **FIELDS** pane, expand **DimSalesTerritory**, and drag the **SalesTerritoryCountry** column onto the report canvas under the **Sales by Day of Week** chart.
 
+**Note:** Map and filled map visuals option are disabled by default. You will need to enabled it first.
+
 16. Under **FactInternetSales**, drag the **SalesAmount** field onto the map.
 
 17. Expand the map to show all the values.
+
+![](./images/2.png)
 
 18. In the **Title text** box, type **Sales by Country**.
 
@@ -116,69 +116,3 @@
 24. Next to **Alignment**, click the **Center** icon.
 
 25. On the **File** menu, click **Save**.
-
----
-
-### Exercise 3: Creating a Power BI Dashboard
-
-#### Task 1: Create a Power BI Dashboard
-
-1. In Power BI Desktop, on the **Home** tab, click **Publish**.
-
-2. In the **Publish to Power BI** dialog box, click **My workspace**, and then click **Select**.
-
-3. The report will then be published to the Power BI portal. When the window displays **Success**, click **Open \'Adventure Works Sales 1.pbix\' in Power BI** to view the report online.
-
-4. In Internet Explorer, if you are prompted to enter your Power BI credentials, enter your email address and password, and wait for the report to open.
-
-5. On the **Sales by Day of Week** column chart, click **Pin visual**.
-
-6. In the **Pin to dashboard** dialog box, click **New dashboard**, type **Adventure Works Sales 1**, and then click **Pin**.
-
-7. On the **Sales by Calendar Quarter** column chart, click **Pin visual**.
-
-8. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list click **Adventure Works Sales 1**, and then click **Pin**.
-
-9. On the **Sales by Country** map chart, click **Pin visual**.
-
-10. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list click **Adventure Works Sales 1**, and then click **Pin**.
-
-11. On the **Sales by Commute Distance** donut chart, click **Pin visual**.
-
-12. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list click **Adventure Works Sales 1**, and then click **Pin**.
-
-13. In the left pane, expand **My Workspace**.
-
-14. Under **DASHBOARDS**, click **Adventure Works Sales 1**.
-
-#### Task 2: Ask Questions of Your Data
-
-1. In the **Adventure Works Sales 1** dashboard, click in the **Ask a question about your data** box.
-
-2. In the **Ask a question about your data** box, type **dim customers**.
-
-3. Power BI shows you a table of the data in the **DimCustomers** table.
-
-4. In the **Ask a question about your data** box, type **how many customer**, and the count of **18484** shows in the results.
-
-5. Click **Pin visual**.
-
-6. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list click **Adventure Works Sales 1**, and then click **Pin**.
-
-7. In the **Ask a question about your data** box, type **who is the oldest customer**, and the results show the oldest customer.
-
-8. In the **Ask a question about your data** box, type **how many products are red**, and the result is displayed.
-
-9. In the **Ask a question about your data** box, type **which country has the most customers**, and a bar chart shows the results.
-
-10. Click **Pin visual**.
-
-11. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list click **Adventure Works Sales 1**, and then click **Pin**.
-
-12. In the left pane, under **My Workspace**, under **DASHBOARDS**, click **Adventure Works Sales 1**. Scroll down and/or left notice the two additional tiles now appear.
-
-13. Close Internet Explorer.
-
-14. In the **Publishing to Power BI** dialog box, click **Got it**.
-
-15. Close Power BI Desktop.
