--- a/Instructions/20778C_LAB_04_LAK.md
+++ b/Instructions/20778C_LAB_04_LAK.md
@@ -16,27 +16,25 @@
 
 #### Task 1: Preparing the Environment
 
-- Ensure that the **MT17B-WS2016-NAT**, **20778C-MIA-DC**, and **20778C-MIA-SQL** virtual machines are running, and then log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student** with the password **Pa55w.rd**.
+- Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 #### Task 2: Import Data from Excel
 
-1. On the taskbar, click **Power BI Desktop**.
+1. Make sure previous task was completed.
 
-2. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
+2. On the Taskbar, click **Power BI Desktop**.
 
-3. In the **Sign in** dialog box, enter your account credentials, and then click **Sign in**.
-
-4. In the **Sign in to your account** dialog box, enter your password credentials, and then click **Sign in**.
+3. To close the getting started window, at the top-right of the window, click **X**.
 
 5. In the **Power BI Desktop** window, click **Get data**.
 
-6. In the **Get Data** window, click **Excel**, and then click **Connect**.
+6. In the **Get Data** window, click **Excel Workbook**, and then click **Connect**.
 
 7. In the **Open** dialog box, browse to the **D:\\Labfiles\\Lab04\\Starter\\Project** folder, click **Sales - Europe.xlsx**, and then click **Open**.
 
 8. In the **Navigator** window, select the **Europe** check box, and then click **Load**.
 
-9. On the **Home** tab, click the **Get Data** arrow, and then click **Excel**.
+9. On the **Home** tab, click the **Get Data** arrow, and then click **Excel Workbook**.
 
 10. In the **Open** dialog box, browse to the **D:\\Labfiles\\Lab04\\Starter\\Project** folder, click **Sales - North America.xlsx**, and then click **Open**.
 
@@ -98,13 +96,15 @@
 
 4. On the **Country** column header, click the **Arrow**, and then click **Load** **more**. You should now see that **United States** and **Canada** are included, and then click **Cancel**.
 
-5. On the **Home** tab, click the **New Source** arrow, and then click **Excel**.
+5. On the **Home** tab, click the **New Source** arrow, and then click **Excel WorkBook**.
 
 6. In the **Open** dialog box, browse to the **D:\\Labfiles\\Lab04\\Starter\\Project** folder, click **Country Codes.xlsx**, and then click **Open**.
 
 7. In the **Navigator** dialog box, select the **Country Codes** check box, and then click **OK**.
 
 8. On the **Transform** tab, click **Use First Row as Headers**.
+
+![](./images/5.png)
 
 9. In Power Query Editor, in the **Queries \[3\]** pane, click **Europe**.
 
@@ -114,9 +114,13 @@
 
 12. In the list below the table, click **Country Codes**, click the **Country** column, and then click **OK**.
 
+![](./images/6.png)
+
 13. The **Country Codes** is added to the **Europe** query.
 
 14. In the **Country Codes** header, click the **double-arrow** icon, clear the **Territory**, **Country**, and **Use original column name as prefix** check boxes, and then click **OK**.
+
+![](./images/7.png)
 
 15. Right-click the **Code** column, point to **Move**, and click **To Beginning**.
 
