--- a/Instructions/20778C_LAB_05_LAK.md
+++ b/Instructions/20778C_LAB_05_LAK.md
@@ -16,7 +16,7 @@
 
 #### Task 1: Preparing the Environment
 
-1. Ensure that the **20778C-MIA-DC** and **20778C-MIA-SQL** virtual machines are both running, and then log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student** with the password **Pa55w.rd**.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 2. In File Explorer, in the **D:\\Labfiles\\Lab05\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -26,21 +26,17 @@
 
 5. When the script completes, press any key to close the window.
 
-6. If you do not have a Power BI login, open **Internet Explorer**, go to **https://powerbi.microsoft.com/en-us/documentation/powerbi-admin-signing-up-for-power-bi-with-a-new-office-365-trial**, and follow the steps to create an account.
-
 #### Task 2: Automatic Relationships
 
-1. On the Taskbar, click **Power BI Desktop**.
+1. Make sure previous tasks was completed.
 
-2. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
+2. On the Taskbar, click **Power BI Desktop**.
 
-3. In the **Sign in** dialog box, enter your account credentials, and then click **Sign in**.
-
-4. In the **Sign in to your account** dialog box, enter your password credentials, and then click **Sign in**.
+3. To close the getting started window, at the top-right of the window, click **X**.
 
 5. In the **Power BI Desktop** window, click **Get data**.
 
-6. In the **Get Data** dialog box, ensure **Excel** is selected, and click **Connect**.
+6. In the **Get Data** dialog box, ensure **Excel WorkBook** is selected, and click **Connect**.
 
 7. In the **Open** dialog box, navigate to **D:\\Labfiles\\Lab05\\Starter\\Project**, click **Adventure Works Sales Data.xlsx**, and then click **Open**.
 
@@ -57,6 +53,8 @@
 18. In the bottom table list, click **DimDate**. When the table preview appears below, click the **DateKey** column.
 
 19. Check that the **Cardinality** is selected to **Many to one (*:1)**, the **Cross filter direction** is **Single**, and **Make this relationship active** is selected, and then click **OK**.
+
+![](./images/8.png)
 
 20. In the **Manage relationships** dialog box, click **Close**.
 
