--- a/Instructions/20778C_LAB_06_LAK.md
+++ b/Instructions/20778C_LAB_06_LAK.md
@@ -21,7 +21,7 @@
 
 #### Task 1: Prepare the Environment
 
-1. Ensure that the **MT17B-WS2016-NAT**, **20778C-MIA-DC**, and **20778C-MIA-SQL** virtual machines are running, and then log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student** with the password **Pa55w.rd**.
+1. Ensure that the **MT17B-WS2016-NAT**, **20778C-MIA-DC**, and **20778C-MIA-SQL** virtual machines are running, and then log on to **20778C-MIA-SQL** as **powerbi\\fenago** with the password **Pa55w.rd**.
 
 2. In the **D:\\Labfiles\\Lab06\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -41,7 +41,7 @@
 
 1. On the Taskbar, click **Microsoft SQL Server Management Studio 18**.
 
-2. In the **Connect to Server** dialog box, ensure SQL Server is set to the **MIA-SQL** database engine instance using **Windows Authentication**, and then click **Connect**.
+2. In the **Connect to Server** dialog box, ensure SQL Server is set to the **localhost** database engine instance using **Windows Authentication**, and then click **Connect**.
 
 3. On the **File** menu, point to **Open**, and then click **Project/Solution**.
 
