--- a/Instructions/20778C_LAB_07_LAK.md
+++ b/Instructions/20778C_LAB_07_LAK.md
@@ -13,7 +13,7 @@
 
 #### Task 1: Prepare the lab environment
 
-1. Ensure that the **20778C-MIA-DC**, **20778C-MIA-SQL**, and **MT17B-WS2016-NAT** virtual machines are running, and then log on to **20778C-MIA-SQL** as **ADVENTUREWORKS\\Student** with the password **Pa55w.rd**.
+1. Ensure that the **20778C-MIA-DC**, **20778C-MIA-SQL**, and **MT17B-WS2016-NAT** virtual machines are running, and then log on to **20778C-MIA-SQL** as **powerbi\\fenago** with the password **Pa55w.rd**.
 
 2. In File Explorer, in the **D:\\Labfiles\\Lab07\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
