--- a/Instructions/20778C_LAB_01_LAK.md
+++ b/Instructions/20778C_LAB_01_LAK.md
@@ -15,7 +15,9 @@
 
 #### Task 1: Prepare the Lab Environment
 
-1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab:
+
+![](./images/files.png)
 
 2. In File Explorer, in the **D:\\Labfiles\\Lab01\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -37,27 +39,27 @@
 
 3. To close the getting started window, at the top-right of the window, click **X**.
 
-6. On the **Power BI Desktop** screen appears, click **Get data**.
+4. On the **Power BI Desktop** screen appears, click **Get data**.
 
-7. In the **Get Data** dialog box, click **SQL Server database**, and then click **Connect**.
+5. In the **Get Data** dialog box, click **SQL Server database**, and then click **Connect**.
 
-8. In the **SQL Server database** dialog box, in the **Server** box, type **localhost**.
+6. In the **SQL Server database** dialog box, in the **Server** box, type **localhost**.
 
-9. In the **Database (optional)** box, type **AdventureWorksDW**, and then click **OK**.
+7. In the **Database (optional)** box, type **AdventureWorksDW**, and then click **OK**.
 
-10. If the **SQL Server database** dialog box appears, leave the default settings unchanged, and then click **Connect**.
+8. If the **SQL Server database** dialog box appears, leave the default settings unchanged, and then click **Connect**.
 
-11. If the **Encryption Support** dialog box appears, click **OK**.
+9. If the **Encryption Support** dialog box appears, click **OK**.
 
-12. In the **Navigator** dialog box, select the **FactInternetSales** check box.
+10. In the **Navigator** dialog box, select the **FactInternetSales** check box.
 
-13. Click **Select Related Tables**, and then click **Load**.
+11. Click **Select Related Tables**, and then click **Load**.
 
 **Note:** Wait for some time while tables are loaded.
 
-14. On the **File** menu, click **Save**.
+12. On the **File** menu, click **Save**.
 
-15. In the **Save As** dialog box, browse to the **D:\\Labfiles\\Lab01\\Starter\\Project** folder, and in the **File name** box, type **Adventure Works Sales 1**, and then click **Save**.
+13. In the **Save As** dialog box, browse to the **D:\\Labfiles\\Lab01\\Starter\\Project** folder, and in the **File name** box, type **Adventure Works Sales 1**, and then click **Save**.
 
 #### Task 2: Add Visualizations to the Report
 
