--- a/Instructions/20778C_LAB_06_LAK.md
+++ b/Instructions/20778C_LAB_06_LAK.md
@@ -10,9 +10,6 @@
     - [Exercise 2: Building Power BI Reports](#exercise-2-building-power-bi-reports)
       - [Task 1: Create a Chart](#task-1-create-a-chart)
       - [Task 2: Create a Map Visualization](#task-2-create-a-map-visualization)
-    - [Exercise 3: Creating a Power BI Dashboard](#exercise-3-creating-a-power-bi-dashboard)
-      - [Task 1: Publish Reports from Power BI Desktop](#task-1-publish-reports-from-power-bi-desktop)
-      - [Task 2: Create a Power BI Dashboard](#task-2-create-a-power-bi-dashboard)
 
 
 ## Lab: Creating a Power BI Report
@@ -21,7 +18,7 @@
 
 #### Task 1: Prepare the Environment
 
-1. Ensure that the **MT17B-WS2016-NAT**, **20778C-MIA-DC**, and **20778C-MIA-SQL** virtual machines are running, and then log on to **20778C-MIA-SQL** as **powerbi\\fenago** with the password **Pa55w.rd**.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 2. In the **D:\\Labfiles\\Lab06\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -31,11 +28,6 @@
 
 5. When the script completes, press any key to close the window.
 
-6. If you do not have a Power BI login, open **Internet Explorer**, go to **https://powerbi.microsoft.com/en-us/documentation/powerbi-admin-signing-up-for-power-bi-with-a-new-office-365-trial**, and follow the steps to create an account.
-
-7. In File Explorer, navigate to **D:**, double-click **Creating an AdventureWorks Database on Azure.docx**, and then complete the steps to create the **AdventureWorksLT** database.
-
-8. Close Internet Explorer.
 
 #### Task 2: Connect to Existing Data in Azure
 
