--- a/Instructions/20778C_LAB_01_LAK.md
+++ b/Instructions/20778C_LAB_01_LAK.md
@@ -9,6 +9,8 @@
       - [Task 1: Import Data into Power BI Desktop](#task-1-import-data-into-power-bi-desktop)
       - [Task 2: Add Visualizations to the Report](#task-2-add-visualizations-to-the-report)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab01\Solution` folder:
+
 ## Lab: Exploring an Enterprise BI Solution
 
 ### Exercise 1: Lab Environment Setup
