--- a/Instructions/20778C_LAB_02_LAK.md
+++ b/Instructions/20778C_LAB_02_LAK.md
@@ -7,7 +7,7 @@
       - [Task 2: Connect to SQL Server from the Power BI Desktop](#task-2-connect-to-sql-server-from-the-power-bi-desktop)
       - [Task 3: Add Charts to the Report](#task-3-add-charts-to-the-report)
 
-
+**Note:** Lab Solution is present in `D:\Labfiles\Lab02\Solution` folder:
 
 ## Lab: Creating Power BI Charts
 
