--- a/Instructions/20778C_LAB_03_LAK.md
+++ b/Instructions/20778C_LAB_03_LAK.md
@@ -9,6 +9,7 @@
     - [Exercise 2: Viewing Reports from Excel Files](#exercise-2-viewing-reports-from-excel-files)
       - [Task 1: View Excel Power View Sheets as Power BI Reports](#task-1-view-excel-power-view-sheets-as-power-bi-reports)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab03\Solution` folder:
 
 ## Lab: Importing Data into Power BI
 
