--- a/Instructions/20778C_LAB_04_LAK.md
+++ b/Instructions/20778C_LAB_04_LAK.md
@@ -9,6 +9,7 @@
     - [Exercise 2: Combine Power BI Data](#exercise-2-combine-power-bi-data)
       - [Task 1: Add Related Data to the Shaped Data](#task-1-add-related-data-to-the-shaped-data)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab04\Solution` folder:
 
 ## Lab: Shaping and Combining Data
 
