--- a/Instructions/20778C_LAB_05_LAK.md
+++ b/Instructions/20778C_LAB_05_LAK.md
@@ -9,6 +9,7 @@
     - [Exercise 2: Calculations](#exercise-2-calculations)
       - [Task 1: Adding Calculated Columns](#task-1-adding-calculated-columns)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab05\Solution` folder:
 
 ## Lab: Modeling Data
 
