--- a/Instructions/20778C_LAB_07_LAK.md
+++ b/Instructions/20778C_LAB_07_LAK.md
@@ -13,7 +13,7 @@
 
 #### Task 1: Prepare the lab environment
 
-1. Ensure that the **20778C-MIA-DC**, **20778C-MIA-SQL**, and **MT17B-WS2016-NAT** virtual machines are running, and then log on to **20778C-MIA-SQL** as **powerbi\\fenago** with the password **Pa55w.rd**.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 2. In File Explorer, in the **D:\\Labfiles\\Lab07\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -23,39 +23,28 @@
 
 5. When the script completes, press any key to close the window.
 
-6. If you do not have a Power BI login, open Internet Explorer, browse to **https://powerbi.microsoft.com/en-us/documentation/powerbi-admin-signing-up-for-power-bi-with-a-new-office-365-trial**, and then follow the steps to create an account.
-
-7. In File Explorer, go to **D:**, double-click **Creating an AdventureWorks Database on Azure.docx**, and then complete the steps to create the **AdventureWorksLT** database.
-
 #### Task 2: Direct connectivity from the Power BI Desktop
 
 1. On the Taskbar, click **Power BI Desktop**.
 
-2. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
-
-3. In the **Sign in** dialog box, enter your account credentials, and then click **Sign in**.
-
-4. If the **Windows Security** dialog box appears, enter your credentials, and then click **OK**.
-
-5. In the **Sign in to your account** dialog box, enter your password credentials, and then click **Sign in**.
+8. To close the getting started window, at the top-right of the window, click **X**.
 
 6. In the **Power BI Desktop** window, click **Get data**.
 
-7. In the **Get Data** dialog box, click **Azure SQL database**, and then click **Connect**.
+7. In the **Get Data** dialog box, click **SQL Server**, and then click **Connect**.
 
-8. In the **SQL Server database** window, in the **Server** box, type the URL of the Azure server **\<*Server Name*\>.database.windows.net** (where **\<*Server Name*\>** is the name of the server that you created).
+8. In the **SQL Server database** window, in the **Server** box, type the URL of the Azure server **localhost** .
 
 9. In the **Database (optional)** box, type **AdventureWorksLT**.
 
 10. Under **Data Connectivity mode**, click **DirectQuery**, and then click **OK**.
 
-11. In the **SQL Server database** dialog box, on the **Database** tab, in the **User name** box, type **Student**.
-
-12. In the **Password** box, type **Pa55w.rd**, and then click **Connect**.
 
 13. In the **Navigator** dialog box, select the **SalesLT.Product** and **SalesLT.SalesOrderDetail** check boxes, and then click **Load**.
 
 14. In the **Visualizations** pane, click the **Card** icon.
+
+![](./images/13.png)
 
 15. In the **Fields** pane, expand the **SalesLT SalesOrderDetail** table, and drag the **OrderQty** field to the chart.
 
