--- a/Instructions/20778C_LAB_08_LAK.md
+++ b/Instructions/20778C_LAB_08_LAK.md
@@ -6,6 +6,7 @@
       - [Task 1: Prepare the Lab Environment](#task-1-prepare-the-lab-environment)
       - [Task 2: Using Custom Visuals](#task-2-using-custom-visuals)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab08\Solution` folder:
 
 ## Lab: Using Marketplace Visualizations
 
@@ -13,7 +14,7 @@
 
 #### Task 1: Prepare the Lab Environment
 
-1. Ensure that the **20778C-MIA-DC**, **20778C-MIA-SQL**, and **MT17B-WS2016-NAT** virtual machines are running, and then log on to **20778C-MIA-SQL** as **powerbi\\fenago** with the password **Pa55w.rd**.
+1. Ensure that you have copied all folders from `Desktop/power-bi-quickstart` folder into **D:\\** drive before starting the lab.
 
 2. In the **D:\\Labfiles\\Lab08\\Starter** folder, right-click **Setup.cmd**, and then click **Run as administrator**.
 
@@ -23,34 +24,39 @@
 
 5. When the script completes, press any key to close the window.
 
-6. If you do not have a Power BI login, open Internet Explorer, browse to **https://powerbi.microsoft.com/en-us/documentation/powerbi-admin-signing-up-for-power-bi-with-a-new-office-365-trial**, and then follow the steps to create an account.
-
 #### Task 2: Using Custom Visuals
 
 1. On the Taskbar, click **Power BI Desktop**.
 
-2. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
-
-3. In the **Sign in** dialog box, enter your account credentials, and then click **Sign in**.
-
-4. In the **Sign in to your account** dialog box, enter your password credentials, and then click **Sign in**.
+3. To close the getting started window, at the top-right of the window, click **X**.
 
 5. In the **Power BI Desktop** window, click **Open other reports**.
 
 6. In the **Open** dialog box, browse to **D:\\Labfiles\\Lab08\\Starter\\Project**, click **Adventure Works Sales.pbix**, and then click **Open**.
 
-7. If the **Introducing Q&A** dialog box appears, click **Got it**.
+7. Click **Sunburst**.
 
-8. In the **VISUALIZATIONS** pane, click the ellipsis (**...**), and then click **Import from marketplace**.
+![](./images/14.png)
 
-9. In the **Power BI Visuals** dialog box, in the **Search** box, type **Sunburst**, and then press Enter.
+8. Drag **Color** from *SalesLT Product* in **Group**.
 
-10. Next to **Sunburst**, click **Add**.
+![](./images/15.png)
 
-11. In the **Import custom visual** dialog box, click **OK**.
+9. Drag **SalesPerson** from *SalesLT Customer* in **Group**.
 
-12. In the **Report** view, on the **Sales Report** tab, click the **Order Quantity by Color and Sales Person** visual.
+![](./images/16.png)
 
-13. In the **VISUALIZATION** pane, click the **Sunburst** icon. Data that was previously displayed using the **Clustered column chart** should now be displayed in the **Sunburst** visualization.
+9. Drag **OrderQty** from *SalesLT SalesOrderDetails* in **Values**.
+
+![](./images/17.png)
+
+10. After making all the changes, config should ike this this:
+
+![](./images/18.png)
+
+10. You should get following visual:
+
+![](./images/19.png)
+
 
 14. Close Power BI Desktop, without saving any changes.
