--- a/Instructions/20778C_LAB_06_LAK.md
+++ b/Instructions/20778C_LAB_06_LAK.md
@@ -11,6 +11,10 @@
       - [Task 1: Create a Chart](#task-1-create-a-chart)
       - [Task 2: Create a Map Visualization](#task-2-create-a-map-visualization)
 
+**Note:** Lab Solution is present in `D:\Labfiles\Lab06\Solution` folder:
+
+![](./images/lab6s.png)
+
 
 ## Lab: Creating a Power BI Report
 
@@ -29,15 +33,19 @@
 5. When the script completes, press any key to close the window.
 
 
-#### Task 2: Connect to Existing Data in Azure
+#### Task 2: Connect to Existing Data
 
 1. On the Taskbar, click **Microsoft SQL Server Management Studio 18**.
 
 2. In the **Connect to Server** dialog box, ensure SQL Server is set to the **localhost** database engine instance using **Windows Authentication**, and then click **Connect**.
 
+![](./images/9.png)
+
 3. On the **File** menu, point to **Open**, and then click **Project/Solution**.
 
 4. In the **Open Project** dialog box, browse to the **D:\\Labfiles\\Lab06\\Starter\\Project** folder, and then double-click **Project.ssmssln**.
+
+![](./images/10.png)
 
 5. If Solution Explorer is not visible, on the **View** menu, click **Solution Explorer**.
 
@@ -45,17 +53,13 @@
 
 7. On the Taskbar, click **Power BI Desktop**.
 
-8. In the **Welcome to Power BI Desktop** window, click **Already have a Power BI account? Sign in**.
-
-9. In the **Sign in** dialog box, enter your account credentials, and then click **Sign in**.
-
-10. In the **Sign in to your account** dialog box, enter your password credentials, and then click **Sign in**.
+8. To close the getting started window, at the top-right of the window, click **X**.
 
 11. In the **Power BI Desktop** window, click **Get data**.
 
-12. In the **Get Data** dialog box, click **Azure SQL database**, and then click **Connect**.
+12. In the **Get Data** dialog box, click **SQL Server**, and then click **Connect**.
 
-13. In the **SQL Server database** dialog box, in the **Server** box, type the URL of the Azure server **\<*Server Name*\>.database.windows.net**.
+13. In the **SQL Server database** dialog box, in the **Server** box, type the URL of the server **localhost**.
 
 14. In the **Database (optional)** box, type **AdventureWorksLT**.
 
@@ -65,15 +69,19 @@
 
 17. In Power BI Desktop, in the **SQL statement (optional, requires database)** box, paste the query, and then click **OK**.
 
+![](./images/11.png)
+
 18. If the **SQL Server database** dialog box appears, on the **Database** tab, in the **User name** box, type **Student**, in the **Password** box, type **Pa55w.rd**, and then click **Connect**.
 
 19. In the data preview window, click **Load**.
 
+![](./images/12.png)
+
 20. On the **Home** tab, click the **Get Data** arrow, and then click **More**.
 
-21. In the **Get Data** dialog box, click **Azure SQL database**, and then click **Connect**.
+21. In the **Get Data** dialog box, click **SQL Server**, and then click **Connect**.
 
-22. In the **SQL Server database** dialog box, in the **Server** box, type the URL of the Azure server **\<*Server Name*\>.database.windows.net**.
+22. In the **SQL Server database** dialog box, in the **Server** box, type the URL of the Azure server **localhost**.
 
 23. In the **Database (optional)** box, type **AdventureWorksLT**.
 
@@ -366,70 +374,4 @@
 
 18. On the **File** menu, click **Save**.
 
-19. Leave the report open for the next exercise.
-
----
-
-### Exercise 3: Creating a Power BI Dashboard
-
-#### Task 1: Publish Reports from Power BI Desktop
-
-1. In Power BI Desktop, on the **Home** tab, click **Publish**.
-
-2. In the **Publish to Power BI** dialog box, click **My workspace**, and then click **Select**.
-
-3. In the **Publishing to Power BI** dialog box, when the window displays **Success**, click **Open 'AdventureWorksLT Sales 6.pbix' in Power BI** to view the report online.
-
-4. In Internet Explorer, click **SIGN IN**, enter your email address and password, click **Sign in**, and wait for the report to open.
-
-#### Task 2: Create a Power BI Dashboard
-
-1. In Power BI, in the **AdventureWorksLT Sales** report, at the bottom of the page, click **Page 1**.
-
-2. Click the **Target Sales** visual, and then click **Pin visual**.
-
-3. In the **Pin to dashboard** dialog box, click **New dashboard**, type **AdventureWorksLT Sales**, and then click **Pin**.
-
-4. On the **Top Selling Customers** visual, click **Pin visual**.
-
-5. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list, click **AdventureWorksLT Sales**, and then click **Pin**.
-
-6. On the **Orders by Main Category** visual, click **Pin visual**.
-
-7. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list, click **AdventureWorksLT Sales**, and then click **Pin**.
-
-8. On the **Top Selling Bikes** visual, click **Pin visual**.
-
-9. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list, click **AdventureWorksLT Sales**, and then click **Pin**.
-
-10. On the **Sales by Main Category** visual, click **Pin visual**.
-
-11. In the **Pin to dashboard** dialog box, click **Existing dashboard**, in the list, click **AdventureWorksLT Sales**, and then click **Pin**.
-
-12. In the left-hand pane, expand **My Workspace**, and then under **DASHBOARDS**, click the **AdventureWorksLT Sales** dashboard to open it.
-
-13. Notice that the tiles are all the same size.
-
-14. On the **Target Sales** tile, click **More options** (**...**), and then click **Edit details**.
-
-15. In the **Title** box, type **Target Sales**, in the **Subtitle** box, type **Sales target for 2016**, and then click **Apply**.
-
-16. On the **Top Selling Customers** tile, click **More options** (**...**), and then click **Edit details**.
-
-17. In the **Title** box, type **Top Selling Customers**, in the **Subtitle** box, type **Customers selling the most products**, and then click **Apply**.
-
-18. On the **Top Selling Bikes** tile, click **More options** (**...**), and then click **Open in focus mode**. The tile opens into its own space.
-
-19. Expand the **FILTERS** pane, expand **LineTotal is greater than $32,000**, change the value of **32000** to **40000**, and then click **Apply filter**.
-
-20. Next to the **Top Selling Bikes** report title, click **Exit Focus mode**.
-
-21. Click **Enter Full Screen Mode**. Notice that the dashboard displays without any of the browser interface. This is ideal for presentations.
-
-22. Press Esc to exit full-screen mode, and return to the dashboard.
-
-23. Close Internet Explorer.
-
-24. In the **Publishing to Power BI** dialog box, click **Got it**.
-
-25. Close Power BI Desktop, and then close SQL Server Management Studio without saving any changes.
+19. Close Power BI Desktop, and then close SQL Server Management Studio without saving any changes.
